--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <meta property="og:description" content="Crear una web es sencillo. Calcula el coste para crear tu página o sitio web. Obtén un presupuesto aproximado." />
         <meta property="og:url" content="https://fsocietys-mx.github.io/cotizatuweb/" />
         <meta property="og:site_name" content="Cuanto cuesta mi web" />
+	<meta property="og:image" content="https://fsocietys-mx.github.io/cotizatuweb/img/web/intro.png" />
+        
         <!-- tbb
         <meta property="og:image" content="https://www.cuantocuestamiweb.comshare-og-es.png" />-->
         
